--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">LockApp</string>
+    <string name="enter_title">Enter Title</string>
+    <string name="select_apps">Select Apps</string>
 </resources>
