--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">LockApp</string>
     <string name="enter_title">Enter Title</string>
     <string name="select_apps">Select Apps</string>
+    <string name="cancel">Cancel</string>
+    <string name="select">Select</string>
+    <string name="save">Save</string>
 </resources>
