--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,12 @@
 <resources>
     <string name="app_name">LockApp</string>
     <string name="enter_title">Enter Title</string>
-    <string name="select_apps">Select Apps</string>
+    <string name="select_apps">Select App</string>
     <string name="cancel">Cancel</string>
     <string name="select">Select</string>
     <string name="save">Save</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="no_notes_found">No Notes Found</string>
+    <string name="selected_apps">Selected App: %1s</string>
 </resources>
