--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="no_notes_found">No Notes Found</string>
     <string name="selected_apps">Selected App: %1s</string>
+    <string name="select_time_and_date">Select Time and Date</string>
 </resources>
